Updated projector and lighting information
Added second row of projectors

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	Mark Stamnes
 	HCDE 437 Sprint 2014
 	University of Washington -->
-	<!-- Credits: templatemo.com, jquery.js, bootstrap.js, stickUp.js, colorbox -->
+
 	<head>
 		<title>Seattle AV Services Bootstrap Protosite</title>
 		<meta name="keywords" content="seattle,av source,projection,projector,video,audio,staging,drapery,rental,sales,audio visual source,conference,auction,convention" />
@@ -13,14 +13,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="seattleavs icon" href="images/favicon.ico">
 
-		<!-- Google Web Font Embed -->
+		<!-- Embedded Google Web Font -->
 		<link href='http://fonts.googleapis.com/css?family=quantico:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 
-		<!-- Bootstrap core CSS -->
+		<!-- Bootstrap  CSS -->
 		<link href="css/bootstrap.css" rel='stylesheet' type='text/css'>
 
-		<!-- Custom styles for this template -->
+		<!-- Colorbox CSS -->
 		<link href="js/colorbox/colorbox.css"  rel='stylesheet' type='text/css'>
+
+		<!-- Style CSS -->
 		<link href="css/savs-template_style.css"  rel='stylesheet' type='text/css'>
 
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -29,10 +31,8 @@
 		<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 		<![endif]-->
 
-		<!-- it works the same with all jquery version from 1.x to 2.x -->
+		<!-- JSSOR Slider Includes -->
 		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-		<!-- use jssor.slider.mini.js (39KB) or jssor.sliderc.mini.js (31KB, with caption, no slideshow) or jssor.sliders.mini.js (26KB, no caption, no slideshow) instead for release -->
-		<!-- jssor.slider.mini.js = jssor.sliderc.mini.js = jssor.sliders.mini.js = (jssor.core.js + jssor.utils.js + jssor.slider.js) -->
 		<script type="text/javascript" src="js/jssor.core.js"></script>
 		<script type="text/javascript" src="js/jssor.utils.js"></script>
 		<script type="text/javascript" src="js/jssor.slider.js"></script>
@@ -146,7 +146,7 @@
 			</div>
 			<!-- End JSSOR Slider -->
 		</div>
-		
+
 		<!-- Start Welcome -->
 		<div id="about" >
 			<div class="welcome">
@@ -154,15 +154,16 @@
 					<div class="slogan text-center">
 						<span class="txt_darkgrey">Welcome to </span><span class="txt_orange">Seattle AV Source</span>
 						<div class="txt_slogan">
-							<i style="font-size: 16px;">Seattle's premier supplier for rentals of projection, lighting, video, audio, staging and drapery equipment</i>
+							<i style="font-size: 16px;">Seattle's premier supplier of A/V equipment rentals for projection, lighting, video, audio, staging and drapery equipment</i>
 						</div>
 						<div class="content-section">
 							<div class="container">
 								<div class="row">
-									<div class="col-md-12 col-sm-6">
+									<div class="col-md-12 col-sm-6">
+
 										<div class="service-item">
 											<p>
-												Seattle Audio-Video Source is a cooperation of Dat a/ Video Projection, Lighting,
+												Seattle Audio-Video Source is a cooperation of Data / Video Projection, Lighting,
 												Sound and AV Labor Specialists in the Audio-Video Industry. Doug Kennelly went
 												in business for himself April 15th, 1980 and throughout the years, Doug Kennelly
 												has worked with many business owners and the idea of creating this co-operative
@@ -179,7 +180,7 @@
 								<!-- /.row -->
 							</div>
 							<!-- /.container -->
-						</div>				
+						</div>
 
 						<!-- /.services -->
 						<div id="services" class="content-section">
@@ -213,7 +214,7 @@
 											<span class="service-icon third"></span>
 											<a href="#audio"><h2>Audio</h2></a>
 											<p>
-												We have a full line of custom professional sound reinforcement solutions from small public address systems to full size sound systems for auctions, concerts, conferences and conventions.
+												We have a full line of custom professional pro-aodio reinforcement solutions from small public address systems to full size sound systems for auctions, concerts, conferences and conventions.
 											</p>
 										</div>
 										<!-- /.service-item -->
@@ -292,7 +293,7 @@
 								</div>
 								<div class="clearfix"></div>
 								<p class="rentals_sales_text">
-									From ambience in Auctions to stage lighting for concerts. We have the infrastcructure, trussing, cabling, lights, controllers and experts to brighten up even your darkest night.
+									From ambience in Auctions to stage lighting for concerts. We have the infrastcructure, the trussing, cabling, lights, controllers and experts to brighten up even your darkest night.
 								</p>
 							</li>
 						</ul>
@@ -315,7 +316,7 @@
 								</div>
 								<div class="clearfix"></div>
 								<p class="rentals_sales_text">
-									From single video monitors to video walls to mobile video conferencing. We've got you hooked up, hoodwinked and so connected you'll practically bleed video screens.
+									From single video monitors to video walls to mobile digital video conferencing. We've got you hooked up, hoodwinked and so connected you'll practically bleed video screens.
 								</p>
 							</li>
 						</ul>
@@ -336,7 +337,7 @@
 								</div>
 								<div class="clearfix"></div>
 								<p class="rentals_sales_text">
-									Shakespeare would roll over in his grave if he knew what we were up to in the realms of staging and drapery. We have steel decking big enough for Metallica and enough pipes and drapes to make a booth for every gamer at the next Dark Lord of the Games Game-a-Thon.
+									Shakespeare would roll over in his grave if he knew what we were up to in the realms of staging and drapery. We have steel decking big enough for Metallica and enough pipes and drapes to make a booth for every gamer at the next Uber Dark Lord of the Games Game-a-Thon.
 								</p>
 							</li>
 						</ul>
@@ -371,11 +372,14 @@
 						<div class="project-box">
 							<img src="images/p1f.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
-								<h5>Eiki LC-85</h5>
+								<h5>Eiki #LC-85</h5>
 								<hr />
 								<h4>20000 ANSI Lumens. HD 1080p. Long throw, up to 100 feet wide</h4>
 							</div>
 						</div> </a>
+						<p>
+							20000 ANSI Lumens
+						</p>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
 						<a class="colorbox" href="images/p2f.jpg" data-group="projectors">
@@ -387,39 +391,123 @@
 								<h4>10000 ANSI Lumens. HD 1080p. Long throw up to 45 feet wide.</h4>
 							</div>
 						</div> </a>
+						<p>
+							10000 ANSI Lumens
+						</p>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
 						<a class="colorbox" href="images/p3f.jpg" data-group="projectors">
 						<div class="project-box">
 							<img src="images/p3f.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
-								<h5>Eiki</h5>
+								<h5>Eiki #LC-XB35</h5>
 								<hr />
-								<h4>Projector</h4>
+								<h4>8000 ANSI Lumens. HD 1080p. Long throw up to 30 feet wide.</h4>
 							</div>
 						</div> </a>
+						<p>
+							8000 ANSI Lumens
+						</p>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design" >
 						<a class="colorbox" href="images/p5f.jpg" data-group="projectors">
 						<div class="project-box">
 							<img src="images/p5f.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
-								<h5>Eiki</h5>
+								<h5>Eiki #CB-20</h5>
 								<hr />
-								<h4>Projector</h4>
+								<h4>5000 ANSI Lumens. HD 1080p. Long throw up to 20 feet wide.</h4>
 							</div>
 						</div> </a>
+						<p>
+							5000 ANSI Lumens
+						</p>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
 						<a class="colorbox" href="images/p4f.jpg" data-group="projectors">
 						<div class="project-box">
 							<img src="images/p4f.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
-								<h5>Eiki</h5>
+								<h5>Hitachi Short Throw</h5>
 								<hr />
-								<h4>Projector</h4>
+								<h4>4500 ANSI Lumens. HD 1080p. Short throw up to 15 feet wide</h4>
 							</div>
 						</div> </a>
+						<p>
+							4500 ANSI Lumens
+						</p>
+					</li>
+				</ul><!-- End Gallery -->
+				<ul class="project-gallery" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
+						<a class="colorbox" href="images/p1f.jpg" data-group="projectors">
+						<div class="project-box">
+							<img src="images/p1f.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>Eiki #LC-85</h5>
+								<hr />
+								<h4>20000 ANSI Lumens. HD 1080p. Long throw, up to 100 feet wide</h4>
+							</div>
+						</div> </a>
+						<p>
+							20000 ANSI Lumens
+						</p>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
+						<a class="colorbox" href="images/p2f.jpg" data-group="projectors">
+						<div class="project-box">
+							<img src="images/p2f.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>Eiki #LC-XB43</h5>
+								<hr />
+								<h4>10000 ANSI Lumens. HD 1080p. Long throw up to 45 feet wide.</h4>
+							</div>
+						</div> </a>
+						<p>
+							10000 ANSI Lumens
+						</p>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+						<a class="colorbox" href="images/p3f.jpg" data-group="projectors">
+						<div class="project-box">
+							<img src="images/p3f.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>Eiki #LC-XB35</h5>
+								<hr />
+								<h4>8000 ANSI Lumens. HD 1080p. Long throw up to 30 feet wide.</h4>
+							</div>
+						</div> </a>
+						<p>
+							8000 ANSI Lumens
+						</p>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design" >
+						<a class="colorbox" href="images/p5f.jpg" data-group="projectors">
+						<div class="project-box">
+							<img src="images/p5f.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>Eiki #CB-20</h5>
+								<hr />
+								<h4>5000 ANSI Lumens. HD 1080p. Long throw up to 20 feet wide.</h4>
+							</div>
+						</div> </a>
+						<p>
+							5000 ANSI Lumens
+						</p>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+						<a class="colorbox" href="images/p4f.jpg" data-group="projectors">
+						<div class="project-box">
+							<img src="images/p4f.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>Hitachi Short Throw</h5>
+								<hr />
+								<h4>4500 ANSI Lumens. HD 1080p. Short throw up to 15 feet wide</h4>
+							</div>
+						</div> </a>
+						<p>
+							4500 ANSI Lumens
+						</p>
 					</li>
 				</ul><!-- End Gallery -->
 
@@ -468,6 +556,9 @@
 								<h4>WITH CONTROLLERS</h4>
 							</div>
 						</div> </a>
+						<p>
+							Par 64's, Bars & Controllers
+						</p>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
 						<a class="colorbox" href="images/pr5.jpg">
@@ -479,6 +570,9 @@
 								<h4>ALL SIZES AND COLORS</h4>
 							</div>
 						</div> </a>
+						<p>
+							Hanging LED Par 36
+						</p>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
 						<a class="colorbox" href="images/pr3.jpg">
@@ -490,6 +584,9 @@
 								<h4>ALL COLORS AND SIZES</h4>
 							</div>
 						</div> </a>
+						<p>
+							Floor standing Par 36 up light
+						</p>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design">
 						<a class="colorbox" href="images/pr2.png">
@@ -501,6 +598,9 @@
 								<h4>LIGHTS</h4>
 							</div>
 						</div> </a>
+						<p>
+							Customized packages
+						</p>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration">
 						<a class="colorbox" href="images/pr1.jpg">
@@ -512,6 +612,9 @@
 								<h4>PROJECTION LIGHTS</h4>
 							</div>
 						</div> </a>
+						<p>
+							GOBO Light Projection
+						</p>
 					</li>
 				</ul><!-- /.gallery -->
 			</div>
@@ -618,7 +721,7 @@
 		</div>
 		<div class="clearfix"></div>
 		</div>
-		
+
 		<!-- Staging / Drapery -->
 		<div id="audio">
 			<div class="container">
@@ -695,91 +798,91 @@
 				</ul><!-- /.gallery -->
 			</div>
 
-		<!-- Staging / Drapery -->
-		<div id="staging">
-			<div class="container">
-				<div class="row">
-					<div class="line-header" style="margin-top: 150px;">
-						<div class="text-center">
-							<hr class="team_hr team_hr_left hr_gray"/>
-							<span class="txt_darkgrey">STAGE / DRAPES</span>
-							<hr class="team_hr team_hr_right hr_gray" />
+			<!-- Staging / Drapery -->
+			<div id="staging">
+				<div class="container">
+					<div class="row">
+						<div class="line-header" style="margin-top: 150px;">
+							<div class="text-center">
+								<hr class="team_hr team_hr_left hr_gray"/>
+								<span class="txt_darkgrey">STAGE / DRAPES</span>
+								<hr class="team_hr team_hr_right hr_gray" />
+							</div>
 						</div>
+						<br class="clearfix"/>
 					</div>
-					<br class="clearfix"/>
+
+					<ul class="project-gallery" >
+						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
+							<a class="colorbox" href="images/Dummy.jpg">
+							<div class="project-box">
+								<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+								<div class="project-overlay">
+									<h5>IMAGE</h5>
+									<hr />
+									<h4>PLACE HOLDER</h4>
+								</div>
+							</div> </a>
+						</li>
+						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
+							<a class="colorbox" href="images/Dummy.jpg">
+							<div class="project-box">
+								<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+								<div class="project-overlay">
+									<h5>IMAGE</h5>
+									<hr />
+									<h4>PLACE HOLDER</h4>
+								</div>
+							</div> </a>
+						</li>
+						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+							<a class="colorbox" href="images/Dummy.jpg">
+							<div class="project-box">
+								<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+								<div class="project-overlay">
+									<h5>IMAGE</h5>
+									<hr />
+									<h4>PLACE HOLDER</h4>
+								</div>
+								<div class="text-center">
+									Ultra short throw projector
+								</div>
+							</div> </a>
+						</li>
+						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design" >
+							<a class="colorbox" href="images/Dummy.jpg">
+							<div class="project-box">
+								<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+								<div class="project-overlay">
+									<h5>IMAGE</h5>
+									<hr />
+									<h4>PLACE HOLDER</h4>
+								</div>
+							</div> </a>
+						</li>
+						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+							<a class="colorbox" href="images/Dummy.jpeg">
+							<div class="project-box">
+								<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+								<div class="project-overlay">
+									<h5>IMAGE</h5>
+									<hr />
+									<h4>PLACE HOLDER</h4>
+								</div>
+							</div> </a>
+						</li>
+					</ul><!-- /.gallery -->
 				</div>
 
-				<ul class="project-gallery" >
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
-						<a class="colorbox" href="images/Dummy.jpg">
-						<div class="project-box">
-							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
-							<div class="project-overlay">
-								<h5>IMAGE</h5>
-								<hr />
-								<h4>PLACE HOLDER</h4>
-							</div>
-						</div> </a>
-					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
-						<a class="colorbox" href="images/Dummy.jpg">
-						<div class="project-box">
-							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
-							<div class="project-overlay">
-								<h5>IMAGE</h5>
-								<hr />
-								<h4>PLACE HOLDER</h4>
-							</div>
-						</div> </a>
-					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
-						<a class="colorbox" href="images/Dummy.jpg">
-						<div class="project-box">
-							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
-							<div class="project-overlay">
-								<h5>IMAGE</h5>
-								<hr />
-								<h4>PLACE HOLDER</h4>
-							</div>
-							<div class="text-center">
-								Ultra short throw projector
-							</div>
-						</div> </a>
-					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design" >
-						<a class="colorbox" href="images/Dummy.jpg">
-						<div class="project-box">
-							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
-							<div class="project-overlay">
-								<h5>IMAGE</h5>
-								<hr />
-								<h4>PLACE HOLDER</h4>
-							</div>
-						</div> </a>
-					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
-						<a class="colorbox" href="images/Dummy.jpeg">
-						<div class="project-box">
-							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
-							<div class="project-overlay">
-								<h5>IMAGE</h5>
-								<hr />
-								<h4>PLACE HOLDER</h4>
-							</div>
-						</div> </a>
-					</li>
-				</ul><!-- /.gallery -->
-			</div>
+				<!-- Back to Rentals Button -->
+				<div class="text-center">
+					<div class="height30"></div>
+					<a class="btn btn-lg btn-orange" href="#rentals_sales" role="button">Back To Rentals</a>
+					<div class="height30"></div>
+				</div>
+				<!-- End Back to Rentals Button -->
 
-			<!-- Back to Rentals Button -->
-			<div class="text-center">
-				<div class="height30"></div>
-				<a class="btn btn-lg btn-orange" href="#rentals_sales" role="button">Back To Rentals</a>
-				<div class="height30"></div>
-			</div>
-			<!-- End Back to Rentals Button -->
-
-		</div><!-- /.container -->
+			</div><!-- /.container -->
 		</div>
 		<div class="clearfix"></div>
 		</div>
