Updated Logo and Social Media

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
 								</button>
-								<a class="navbar-brand" href="" rel="nofollow"><img src="images/logo_6.jpg" alt="logo"/></a>
+								<a class="navbar-brand" href="" rel="nofollow"><img src="images/logo.png" height="145" alt="logo"/></a>
 							</div>
 
 							<div class="navbar-collapse collapse" id="nav-bar">
@@ -1091,7 +1091,7 @@
 					<div class="text-center">
 
 						<div class="footer_container">
-							<ul class="list-inline">
+							<ul class="socialmedia">
 								<li>
 									<a href="#"> <span class="social-icon-fb"></span> </a>
 								</li>
