--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<!-- Static navbar -->
 					<div class="navbar navbar-default" role="navigation">
 						<div class="container">
-							<div class="navbar-header" style="height:120px;">
+							<div class="navbar-header">
 								<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 									<span class="sr-only">Toggle navigation</span>
 									<span class="icon-bar"></span>
