Added dropdown menu to rentals

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							</div>
 
 							<div class="navbar-collapse collapse" id="nav-bar">
-								<ul class="nav navbar-nav navbar-right" style="margin-top: 40px; font-size: 14px;">
+								<ul class="nav navbar-nav navbar-right" style="margin-top: 40px; font-size: 13px;">
 
 									<li class="active">
 										<a href="#top">HOME</a>
@@ -67,7 +67,14 @@
 										<a href="#about">ABOUT</a>
 									</li>
 									<li>
-										<a href="#rentals_sales">RENTALS</a>
+										<a href="#rentals_sales" class="rentaldropdown">RENTALS <span class="caret"></span></a>
+										<ul>
+											<li><a href="#projectors">PROJECTORS</a></li>
+											<li><a href="#lighting">LIGHTING</a></li>
+											<li><a href="#video">VIDEO / SCREENS</a></li>
+											<li><a href="#audio">SOUND SYSTEMS</a></li>
+											<li><a href="#staging">STAGE / DRAPES</a></li>
+										</ul>
 									</li>
 									<li>
 										<a href="#gallery">GALLERY</a>
@@ -353,7 +360,7 @@
 		<div id="projectors">
 			<div class="container">
 				<div class="row">
-					<div class="line-header" style="margin-top: 150px;">
+					<div class="line-header"">
 						<div class="text-center">
 							<hr class="team_hr team_hr_left hr_gray"/>
 							<span class="txt_darkgrey">PROJECTORS</span>
@@ -531,7 +538,7 @@
 		<div id="lighting">
 			<div class="container">
 				<div class="row">
-					<div class="line-header" style="margin-top: 150px;">
+					<div class="line-header">
 						<div class="text-center">
 							<hr class="team_hr team_hr_left hr_gray"/>
 							<span class="txt_darkgrey">LIGHTING</span>
@@ -636,7 +643,7 @@
 		<div id="video">
 			<div class="container">
 				<div class="row">
-					<div class="line-header" style="margin-top: 150px;">
+					<div class="line-header">
 						<div class="text-center">
 							<hr class="team_hr team_hr_left hr_gray"/>
 							<span class="txt_darkgrey">VIDEO / SCREENS</span>
@@ -726,7 +733,7 @@
 		<div id="audio">
 			<div class="container">
 				<div class="row">
-					<div class="line-header" style="margin-top: 150px;">
+					<div class="line-header">
 						<div class="text-center">
 							<hr class="team_hr team_hr_left hr_gray"/>
 							<span class="txt_darkgrey">SOUND SYSTEMS</span>
@@ -802,7 +809,7 @@
 			<div id="staging">
 				<div class="container">
 					<div class="row">
-						<div class="line-header" style="margin-top: 150px;">
+						<div class="line-header">
 							<div class="text-center">
 								<hr class="team_hr team_hr_left hr_gray"/>
 								<span class="txt_darkgrey">STAGE / DRAPES</span>
