fixed bug with google maps on mobile

--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
 		<div id="contact">
 			<div class="container">
 				<div class="row">
-					<div class="line-header" style="margin-top: 00px">
+					<div class="line-header" style="margin-bottom: 100px">
 						<div class="text-center">
 							<hr class="team_hr team_hr_left hr_gray"/>
 							<span class="txt_darkgrey">CONTACT US</span>
