Working on comments

--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
 
 	</head>
 	<body>
+		
+		<!-- Outter container and fixed nav bar -->
 		<div class="top-bar" id="top">
 			<div class="container"></div>
 			<div class="top-menu stuckMenu">
 				<div class="container">
+					
 					<!-- Static navbar -->
 					<div class="navbar navbar-default" role="navigation">
 						<div class="container">
@@ -283,7 +286,7 @@
 							</li>
 						</ul>
 					</div>
-					<!-- /.rentals_sales_post 1 -->
+					<!-- End Rentals Sales Post 1 -->
 
 					<div class="col-sm-5 col-md-6 rentals_sales_post">
 						<ul class="list-inline">
@@ -304,7 +307,7 @@
 								</p>
 							</li>
 						</ul>
-					</div><!-- /.rentals_sales_post 2 -->
+					</div><!-- End Rentals Sales Post 2 -->
 
 					<div class="savs-template_clear"></div>
 
@@ -327,7 +330,7 @@
 								</p>
 							</li>
 						</ul>
-					</div><!-- /.rentals_sales_post 3 -->
+					</div><!-- End Renta;ls Sales Post 3 -->
 
 					<div class="col-sm-5 col-md-6 rentals_sales_post">
 						<ul class="list-inline">
@@ -349,18 +352,18 @@
 							</li>
 						</ul>
 					</div>
-					<!-- /.rentals_sales_post 4 -->
+					<!-- End Rental Sales Post 4 -->
 
 				</div>
 			</div>
-		</div>
+		</div>f
 		<!-- End Rentals Sales -->
 
 		<!-- Projectors -->
 		<div id="projectors">
 			<div class="container">
 				<div class="row">
-					<div class="line-header"">
+					<div class="line-header">
 						<div class="text-center">
 							<hr class="team_hr team_hr_left hr_gray"/>
 							<span class="txt_darkgrey">PROJECTORS</span>
@@ -657,7 +660,7 @@
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
 						<a class="colorbox" href="images/Dummy.jpg">
 						<div class="project-box">
-							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<img src="images/vi3t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
 								<h5>IMAGE</h5>
 								<hr />
@@ -668,7 +671,7 @@
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
 						<a class="colorbox" href="images/Dummy.jpg">
 						<div class="project-box">
-							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<img src="images/vi2t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
 								<h5>IMAGE</h5>
 								<hr />
@@ -679,7 +682,7 @@
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
 						<a class="colorbox" href="images/Dummy.jpg">
 						<div class="project-box">
-							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<img src="images/vi3t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
 								<h5>IMAGE</h5>
 								<hr />
@@ -693,7 +696,7 @@
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
 						<a class="colorbox" href="images/Dummy.jpg">
 						<div class="project-box">
-							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<img src="images/vi2t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
 								<h5>IMAGE</h5>
 								<hr />
@@ -704,7 +707,7 @@
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
 						<a class="colorbox" href="images/Dummy.jpg">
 						<div class="project-box">
-							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<img src="images/vi3t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
 								<h5>IMAGE</h5>
 								<hr />
@@ -895,6 +898,7 @@
 		</div>
 		<!-- End Staging / Drapery -->
 
+		<!-- Gallery -->
 		<div id="gallery" >
 			<div class="container">
 				<div class="row">
@@ -1023,12 +1027,13 @@
 									</div>
 								</div> </a>
 							</li>
-						</ul><!-- /.gallery -->
+						</ul>
 					</div>
-				</div><!-- End Row -->
-			</div><!-- End Container -->
-		</div>
+				</div>
+			</div>
+		</div><!-- End Gallery -->
 
+		<!-- Contact -->
 		<div id="contact">
 			<div class="container">
 				<div class="row">
@@ -1069,12 +1074,12 @@
 								SEND
 							</button>
 						</form>
-
 					</div>
-				</div><!-- /.row -->
-			</div><!-- /.container -->
-		</div><!-- /#contact -->
+				</div>
+			</div>
+		</div><!-- End Contact -->
 
+		<!-- Testimonial -->
 		<div class="tweets">
 			<div class="container">
 				<div class="row" style="margin-top:20px;">
@@ -1089,9 +1094,11 @@
 						<br/>
 						<span class="twitter_user">Joe @ BlinkUX</span>
 					</div>
-				</div><!-- /.row -->
-			</div><!-- /.container -->
-		</div>
+				</div>
+			</div>
+		</div><!-- End Testimonial -->
+		
+		<!-- Footer -->
 		<div class="footer" >
 			<div class="container">
 				<div class="row">
@@ -1122,7 +1129,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div><!-- End Footer -->
 
 		<script src="js/jquery.min.js" type="text/javascript"></script>
 		<script src="js/bootstrap.min.js"  type="text/javascript"></script>
@@ -1131,6 +1138,3 @@
 		<script src="js/savs-template_script.js"  type="text/javascript"></script>
 	</body>
 </html>
-<!--
-Original template from Templetamo
--->
